--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #7ad2e2;
+    background-color: #7AD3E3;
 }
 
 #content {
@@ -18,6 +18,7 @@ body {
 img {
     max-width: 220px;
     height: auto; 
+    border-radius: 40%;
 }
 
 .fa {
