--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #7AD3E3;
+    background-color: black;
 }
 
 #content {
@@ -18,7 +18,7 @@ body {
 img {
     max-width: 220px;
     height: auto; 
-    border-radius: 40%;
+    border-radius: 50%;
 }
 
 .fa {
