--- a/about/about.css
+++ b/about/about.css
@@ -47,6 +47,12 @@ a:visited {
   color: #00FF00;
 }
 
+a.title:link,
+a.title:visited {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 code,
 .code {
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
